--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             </div>     
         </div>
         <div id="log">
+            <div class="changeGame">
+                <button>
+                    <a href="./puissance_4/puissance4.html">Puissance 4</a>
+                </button>
+            </div>
             <div>
                 <h2>Combien de Joueurs ?</h2>
                 <div class="info">
