--- a/puissance_4/puissance4.html
+++ b/puissance_4/puissance4.html
@@ -11,48 +11,62 @@
     <h1>Puissance 4</h1>
     <div id="game">
         <div id="tab">
-            <div class="case" onclick="play(this)"></div>
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div>
-            <div class="case" onclick="play(this)"></div>
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div>
-            <div class="case" onclick="play(this)"></div>
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
-            <div class="case" onclick="play(this)"></div> 
+            <div class="col" onclick="play(this)">
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+            </div>
+            <div class="col" onclick="play(this)" >
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+            </div>
+            <div class="col" onclick="play(this)">
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+            </div>
+            <div class="col" onclick="play(this)">
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+            </div>
+            <div class="col" onclick="play(this)">
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div>  
+            </div>
+            <div class="col" onclick="play(this)">
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+            </div>
+            <div class="col" onclick="play(this)">
+                <div class="case"></div>
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+                <div class="case"></div> 
+            </div>
         </div>     
     
         <div id="log">
@@ -86,7 +100,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="info">
         <h2 id="result"></h2>
     </div>    
     <script src="./puissance4.js"></script>
