--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <h1>Morpion</h1>
+    <div id="gameContainer">
     <div id="game">
         <div id="tab">
             <div class="col">
@@ -60,7 +62,8 @@
     </div>
     <div>
         <h2 id="result"></h2>
-    </div>    
+    </div> 
+    </div>   
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
