--- a/puissance_4/puissance4.html
+++ b/puissance_4/puissance4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./puissance4.css">
+    <link rel="stylesheet" href="./responsivep4.css">
 </head>
 <body>
     <h1>Puissance 4</h1>
